--- a/test/fixtures/restaurants.yml
+++ b/test/fixtures/restaurants.yml
@@ -5,7 +5,7 @@ one:
   address: MyString
   city: MyString
   state: MyString
-  zip: MyString
+  zip: 12345
   upvote: 1
   downvote: 1
 
@@ -14,6 +14,6 @@ two:
   address: MyString
   city: MyString
   state: MyString
-  zip: MyString
+  zip: 12345
   upvote: 1
   downvote: 1
