added changes to the restaurant_controller tests and to the vote controller tests to make them pass

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -4,8 +4,14 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
+one: 
+  id: 1
+  email: email1@mail.com
+  encrypted_password: 11111111
 # column: value
 #
-two: {}
+two: 
+  id: 2
+  email: email2@mail.com
+  encrypted_password: <%= Devise.bcrypt(User, 'passw0rd!') %>
 #  column: value
