--- a/test/fixtures/favorites.yml
+++ b/test/fixtures/favorites.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  user_id: 
-  restaurant_id: 
+  user_id: 1
+  restaurant_id: 1
 
 two:
-  user_id: 
-  restaurant_id: 
+  user_id: 1
+  restaurant_id: 2
