--- a/test/fixtures/comments.yml
+++ b/test/fixtures/comments.yml
@@ -2,10 +2,10 @@
 
 one:
   message: MyString
-  restaurant_id: 
-  user_id: 
+  restaurant_id: 1
+  user_id: 1
 
 two:
   message: MyString
-  restaurant_id: 
-  user_id: 
+  restaurant_id: 1
+  user_id: 2
